--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
         <div class="extra-spacing"></div>
         <div class="intro-text">
             <h1>Projecten</h1>
-            <p>Deze projecten zijn tijdens mijn opleiding Informatica aan de Avans Hogeschool te Breda gemaakt of op
-                aanvraag.</p>
+            <p>Deze projecten zijn in opdracht voor iemand ontwikkeld of tijdens mijn opleiding Informatica aan de Avans Hogeschool te Breda.</p>
         </div>
 
         <div class="projects-filter">
@@ -189,7 +188,7 @@
         <div class="extra-spacing"></div>
         <div class="intro-text">
             <h1>Skills</h1>
-            <p>hieronder vind je mijn programmeer skills!</p>
+            <p>Mijn programmeer specialiteiten!</p>
         </div>
 
         <div class="skills">
