Modified skill bar colors, gonna release version 0.1 now

--- a/index.html
+++ b/index.html
@@ -226,31 +226,31 @@
                 <span class="skill-bar-percentage">75%</span>
             </div><!-- End skill-bar -->
 
-            <div class="skill-bar" data-percent="50%">
-                <div class="skill-bar-title" style="background: #d35400;">
+            <div class="skill-bar" data-percent="65%">
+                <div class="skill-bar-title" style="background: #f0db4f;">
                     <span>JavaScript</span>
                 </div>
-                <div class="skill-bar-loadingbar" style="background: #e67e22;"></div>
-                <span class="skill-bar-percentage">90%</span>
+                <div class="skill-bar-loadingbar" style="background: #e6ce12;"></div>
+                <span class="skill-bar-percentage">65%</span>
             </div><!-- End skill-bar -->
 
-            <div class="skill-bar" data-percent="50%">
-                <div class="skill-bar-title" style="background: #d35400;">
+            <div class="skill-bar" data-percent="65%">
+                <div class="skill-bar-title" style="background: #2448d3;">
                     <span>jQuery</span>
                 </div>
-                <div class="skill-bar-loadingbar" style="background: #e67e22;"></div>
-                <span class="skill-bar-percentage">90%</span>
+                <div class="skill-bar-loadingbar" style="background: #2e67d3;"></div>
+                <span class="skill-bar-percentage">65%</span>
             </div><!-- End skill-bar -->
 
-            <div class="skill-bar" data-percent="50%">
-                <div class="skill-bar-title" style="background: #d35400;">
+            <div class="skill-bar" data-percent="80%">
+                <div class="skill-bar-title" style="background: #ea2d2f;">
                     <span>Java</span>
                 </div>
-                <div class="skill-bar-loadingbar" style="background: #e67e22;"></div>
-                <span class="skill-bar-percentage">90%</span>
+                <div class="skill-bar-loadingbar" style="background: #ea4815;"></div>
+                <span class="skill-bar-percentage">80%</span>
             </div><!-- End skill-bar -->
 
-            <div class="skill-bar" data-percent="50%">
+            <div class="skill-bar" data-percent="90%">
                 <div class="skill-bar-title" style="background: #690081;">
                     <span>C#</span>
                 </div>
@@ -266,12 +266,12 @@
                 <span class="skill-bar-percentage">70%</span>
             </div><!-- End skill-bar -->
 
-            <div class="skill-bar" data-percent="50%">
+            <div class="skill-bar" data-percent="80%">
                 <div class="skill-bar-title" style="background: #124e8c;">
                     <span>Photoshop</span>
                 </div>
                 <div class="skill-bar-loadingbar" style="background: #4288d0;"></div>
-                <span class="skill-bar-percentage">90%</span>
+                <span class="skill-bar-percentage">80%</span>
             </div><!-- End skill-bar -->
         </div>
 
