Added 1 more project to version 0.1

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
             <div class="project mix cat-web cat-eigen" data-myorder="1">
                 <div class="project-hover">
-                    <h3>Poezendorp van der Vorst</h3>
+                    <h3>Ron van Riel Schilderwerken</h3>
                     <div class="actions">
                         <!--<a id="demo01" href="#animatedModal" class="btn">Meer info</a>-->
                         <!--<a id="demo01" href="project.html" class="btn">Meer info</a>-->
@@ -112,7 +112,7 @@
 
             <div class="project mix cat-web cat-eigen" data-myorder="2">
                 <div class="project-hover">
-                    <h3>Poezendorp van der Vorst</h3>
+                    <h3>Parket Exclusief Made</h3>
                     <div class="actions">
                         <!--<a href="#" class="btn">Meer info</a>-->
                         <a href="http://www.parketexclusief.nl" target="_blank" class="btn">Website</a>
@@ -125,6 +125,16 @@
                     <h3>Poezendorp van der Vorst</h3>
                     <div class="actions">
                         <!--<a href="#" class="btn">Meer info</a>-->
+                        <a href="http://www.poezendorpvandervorst.nl" target="_blank" class="btn">Website</a>
+                    </div><!-- end actions -->
+                </div><!-- end project-hover -->
+            </div><!-- end project -->
+
+            <div class="project mix cat-web cat-eigen" data-myorder="3">
+                <div class="project-hover">
+                    <h3>Segeren Expertise</h3>
+                    <div class="actions">
+                        <!--<a href="#" class="btn">Meer info</a>-->
                         <a href="http://www.segerenexpertise.nl" target="_blank" class="btn">Website</a>
                     </div><!-- end actions -->
                 </div><!-- end project-hover -->
@@ -132,7 +142,7 @@
 
             <div class="project mix cat-web cat-eigen" data-myorder="3">
                 <div class="project-hover">
-                    <h3>Poezendorp van der Vorst</h3>
+                    <h3>Lions Fuse</h3>
                     <div class="actions">
                         <!--<a href="#" class="btn">Meer info</a>-->
                         <a href="http://www.lionsfuse.nl" target="_blank" class="btn">Website</a>
@@ -333,10 +343,6 @@
 <script src="//cdn.jsdelivr.net/jquery.scrollto/2.1.2/jquery.scrollTo.min.js"></script>
 <script src="assets/js/custom.js"></script>
 <script src="assets/js/custom_responsive.js"></script>
-
-<script>
-    //    $("#demo01").animatedModal();
-</script>
 
 </body>
 </html>
