Fixed some IE view problems

--- a/index.html
+++ b/index.html
@@ -316,9 +316,8 @@
                                data-error-msg="Email is verplicht">
                         <input name="phone" type="text" placeholder="Telefoon">
                     </div>
-                    <textarea class="custom-textarea" name="message" cols="30" rows="1" placeholder="Bericht" required
-                              data-error-msg="We need to know who you are"></textarea>
-                    <input name="submit" type="submit">
+                    <textarea class="custom-textarea" name="message" cols="30" rows="1" placeholder="Bericht" required></textarea>
+                    <input value="Verzenden" name="submit" type="submit">
                 </form>
             </div>
 
@@ -330,7 +329,7 @@
 
 <footer>
     <ul>
-        <li>© Bram Reinold - 2016</li>
+        <li>© Bram Reinold - 2016 - v0.1</li>
     </ul>
 </footer>
 
